<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="preference_screen">

    <SwitchPreference
        android:defaultValue="false"
        android:key="running_switch"
        android:summary="@string/running_summary_stopped"
        android:title="@string/running_label" />

    <Preference
        android:key="media_select"
        android:summary="@string/select_summary"
        android:title="@string/select_label" />

    <PreferenceCategory
        android:key="settings"
        android:title="@string/settings_label">
        <EditTextPreference
            android:key="deName"
            android:title="@string/portnumber_label" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="extra_category"
        android:title="@string/extra_label">
        <Preference
            android:key="help"
            android:title="@string/help_label" />
        <Preference
            android:key="about"
            android:title="@string/about_label" />
        <Preference
            android:enabled="false"
            android:selectable="true"
            android:summary="@string/value_version"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>